use relative paths.

--- a/pk-datepicker.html
+++ b/pk-datepicker.html
@@ -1,8 +1,8 @@
 <!-- Import Polymer -->
-<link rel="import" href="bower_components/polymer/polymer.html">
-<link rel="import" href="bower_components/fa-awesome/fa-awesome.html">
-<link rel="import" href="bower_components/i18n-msg/i18n-msg.html">
-<link rel="import" href="bower_components/layout/layout.html">
+<link rel="import" href="../polymer/polymer.html">
+<link rel="import" href="../fa-awesome/fa-awesome.html">
+<link rel="import" href="../i18n-msg/i18n-msg.html">
+<link rel="import" href="../layout/layout.html">
 
 <!-- Define your custom element -->
 <dom-module id="pk-datepicker">
