--- a/demo.html
+++ b/demo.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <title>&lt;pk-datepicker&gt;</title>
     <script>//Polymer = {dom: 'shadow'};</script>
-    <script src="bower_components/webcomponentsjs/webcomponents-lite.min.js"></script>
+    <script src="../webcomponentsjs/webcomponents-lite.min.js"></script>
     <link rel="import" href="pk-datepicker.html">
-    <link rel="import" href="bower_components/i18n-msg/i18n-msg.html">
+    <link rel="import" href="../i18n-msg/i18n-msg.html">
 
     <style type="text/css">
         pk-datepicker {
