First batch of proper docs.

--- a/demo/index.html
+++ b/demo/index.html
@@ -4,9 +4,8 @@
     <meta charset="UTF-8">
     <title>&lt;pk-datepicker&gt;</title>
     <script>//Polymer = {dom: 'shadow'};</script>
-    <script src="../webcomponentsjs/webcomponents-lite.min.js"></script>
-    <link rel="import" href="pk-datepicker.html">
-    <link rel="import" href="../i18n-msg/i18n-msg.html">
+    <script src="../../webcomponentsjs/webcomponents-lite.min.js"></script>
+    <link rel="import" href="../pk-datepicker.html">
 
     <style type="text/css">
         pk-datepicker {
@@ -14,14 +13,9 @@
             font-family: "Arial Narrow", Arial, Helvetica, sans-serif;
         }
     </style>
-    <script type="text/javascript">
-        document.addEventListener('HTMLImportsLoaded', function() {
-            I18nMsg.lang = 'de';
-        });
-    </script>
 </head>
 <body>
     <pk-datepicker month="4"></pk-datepicker>
-    <pk-datepicker month="3"></pk-datepicker>
+    <pk-datepicker></pk-datepicker>
 </body>
 </html>
