--- a/demo/index.html
+++ b/demo/index.html
@@ -7,15 +7,71 @@
     <script src="../../webcomponentsjs/webcomponents-lite.min.js"></script>
     <link rel="import" href="../pk-datepicker.html">
 
-    <style type="text/css">
+    <style is="custom-style">
         pk-datepicker {
             width: 320px;
             font-family: "Arial Narrow", Arial, Helvetica, sans-serif;
         }
+
+        .date-selector {
+            padding: 20px;
+        }
+
+        input[type="text"] {
+            width: 300px;
+        }
+
+        pk-datepicker.themed {
+            background-color: #c1c1c1;
+
+            --pk-datepicker-header-theme: {
+                background-color: #4285F4;
+                padding: 0 10px;
+                color: #fff;
+            };
+
+            --pk-datepicker-today-theme: {
+                background-color: #dedede;
+                color: #000;
+            };
+
+            --pk-datepicker-selected-theme: {
+                background-color: #fff;
+                color: #000;
+            };
+        }
     </style>
 </head>
 <body>
-    <pk-datepicker month="4"></pk-datepicker>
+    <div class="date-selector">
+        <label for="dateGetter">Selected value of the picker: </label><br>
+        <input type="text" id="dateGetter"/>
+    </div>
+    <div class="date-selector">
+        <label for="dateSetter">Set value of the picker as JSON object string {"year":"2015", "month": "1", "day": "1"}: </label><br>
+        <input type="text" id="dateSetter" value='{"year":"1985","month":"1","day":"6"}'/>
+    </div>
     <pk-datepicker></pk-datepicker>
+    <p>
+        Here is a (badly) themed one.
+    </p>
+    <pk-datepicker
+        class="themed"
+        month-labels='["Birthday!","Ski Time","Still Ski...","Spring","Warmer","Warm","Hot","Summer!","Cool","Cooler","Icy","X-Mas"]' date='{"year":"1985","month":"1","day":"6"}'
+        day-labels='["Su","Mo","Tu","We","Th","Fr","Sa"]'></pk-datepicker>
+    <script>
+        var dateGetter= document.getElementById('dateGetter');
+        var dateSetter = document.getElementById('dateSetter');
+        var picker = document.querySelector('pk-datepicker');
+
+        dateSetter.addEventListener('change', function(e) {
+            var value = JSON.parse(dateSetter.value);
+            picker.date = value;
+        });
+
+        picker.addEventListener('date-selected', function(e) {
+            dateGetter.value = JSON.stringify(e.detail);
+        });
+    </script>
 </body>
 </html>
