Better keywords. Fixed typos. 2.0.0 -> 2.0.1

--- a/pk-datepicker.html
+++ b/pk-datepicker.html
@@ -9,14 +9,14 @@ Or see the LICENSE file that comes with this code.
 <link rel="import" href="../iron-flex-layout/iron-flex-layout.html">
 
 <!--
-`pk-datepicker` show a simple calendar and let's you pick a date.
+`pk-datepicker` shows a simple calendar and let's you pick a date.
 
 Example:
 
     <pk-datepicker></pk-datepicker>
 
 @group GUI Elements
-@element pk-timepicker
+@element pk-datepicker
 @demo demo/index.html
 -->
 <dom-module id="pk-datepicker">
